# Demand-Shock-Forecast-Resilience-Analytics-Platform

./: .gitignore  Dockerfile  Fact_fix.py  README.md  check_counts.py  demand shock forecast resilience Dashboard.pbix  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
